[package]
name = "proc-macro-kwargs"
version = "0.1.3"
edition = "2018"
license = "MIT"
description = "Keyword argument parsing for function-like proc-macros"
repository = "https://github.com/DuckLogic/proc-macro-kwargs"

[dependencies]
quote = "1"
indexmap = "1"
proc-macro-kwargs-derive = { version = "0.1.0", path = "lib/derive" }

[dependencies.syn]
version = "1"
default-features = false
features = ["parsing", "derive", "extra-traits"]

[dependencies.proc-macro2]
version = "1"
default-features = false


[workspace]
