[package]
name = "proc-macro-kwargs"
version.workspace = true
description = "Keyword argument parsing for function-like proc-macros"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
quote = "1"
indexmap = "2"
proc-macro-kwargs-derive = { version = "0.2.0-alpha.1", path = "lib/derive" }
proc-macro2.workspace = true
syn.workspace = true

[workspace]
resolver = "2"
members = ["lib/derive"]

[workspace.package]
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/DuckLogic/proc-macro-kwargs"

[workspace.dependencies]
proc-macro2 = { version = "1", default-features = false }

[workspace.dependencies.syn]
version = "2"
default-features = false
features = ["parsing", "printing", "derive", "extra-traits"]
