[package]
name = "proc-macro-kwargs-derive"
version.workspace = true
description = "Procedural derive for proc-macro-kwargs"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["proc-macro"] }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
heck = "0.5"
quote = "1"

